# hover-pico

./: .gitignore  CMakeLists.txt  README.md  hover-pico.c  pid_controller.c  pid_controller.h
CAD/: 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.iam  38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.iam  696Z Ball Bearing, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.ipt  696Z Ball Bearing, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.ipt  BaseBoard.ipt  Cable Gland Coupling Fastening Nut, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.ipt  Cable Gland Coupling Fastening Nut, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.ipt  Cable Gland Coupling Nut, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.ipt  Cable Gland Coupling Nut, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.ipt  Cable, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.ipt  Cable, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.ipt  DriveWheelAssembly.iam  DriveWheelAssembly_MIR.iam  Encasing, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.ipt  Encasing, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.ipt  EncoderMount.ipt  EncoderMount_MIR.ipt  EncoderPully.ipt  EncoderPully_MIR.ipt  EncoderTimingBelt.ipt  EncoderTimingBelt_MIR.ipt  Grommet, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder.ipt  Grommet, 38 mm OD, 6 mm Shaft, Incremental Optical Rotary Encoder_MIR.ipt  Hoverboard Frame.ipt  Hoverboard Frame_MIR.ipt  Hoverboard-Robot.iam  WheelPully.ipt  (+9 more)
(+3 files in other folders)
